--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-5",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://github.com/Kumbhani-Juli/bonsai.git",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
