--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-5",
-  "homepage": "https://github.com/Kumbhani-Juli/bonsai.git",
+  "homepage": "https://Kumbhani-Juli.github.io/bonsai/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
